@@ -8,6 +8,8 @@
  - Add xml_huge_tree kwarg to the Client() to enable lxml's huge_tree mode,
    this is disabled by default (#332)
  - Add support to pass base-types to type extensions (#416)
+ - Handle wsdl errors more gracefully by disabling the invalid operations 
+   instead of raising an exception (#407, #387)
  
 
 1.4.1 (2017-04-01)
